# SPE-Project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  indexes.txt  mypy.ini  pyproject.toml  requirements.txt
data/cleaned/: dataset.csv
data/raw/: IFS_09-26-2023 00-50-38-77_timeSeries.csv  Inflation data - hcpi_a.csv  Inflation data - hcpi_m.csv  Inflation data - hcpi_q.csv
dataset/bycountry/: g20 - Argentina.csv  g20 - Australia.csv  g20 - Brazil.csv  g20 - Canada.csv  g20 - China.csv  g20 - France.csv  g20 - Germany.csv  g20 - India.csv  g20 - Indonesia.csv  g20 - Italy.csv  g20 - Japan.csv  g20 - Korea, Rep..csv  g20 - Mexico.csv  g20 - South Africa.csv  g20 - Turkey.csv  g20 - Türkiye, Rep of.csv  g20 - United Kingdom.csv  g20 - United States.csv
dataset/byfile/: g20 - Inflation data - ecpi_a.csv  g20 - Inflation data - ecpi_m.csv  g20 - Inflation data - ecpi_q.csv  g20 - Inflation data - fcpi_a.csv  g20 - Inflation data - fcpi_m.csv  g20 - Inflation data - fcpi_q.csv  g20 - Inflation data - hcpi_a.csv  g20 - Inflation data - hcpi_m.csv  g20 - Inflation data - hcpi_q.csv  g20 - cleaned.csv
notebooks/: cochrane.ipynb  test.ipynb  tests.ipynb
report/: main.tex  references.bib
report/chapters/: conclusions.tex  correlation.tex  data.tex  introduction.tex  prediction.tex  regression.tex  works.tex
src/: __main__.py  baum_welch.py  correlation.py  data_generation.py  hmm.py  main.py  regression.py
src/data/: __init__.py  _cleaning.py  _dataframe.py
src/models/: __init__.py  _baum_welch.py  _correlation.py  _dtw.py  _regression.py  (+2 more)
(+31 files in other folders)
